# games-mcp

./: .gitignore  AGENTS.md  README.md  TASKS.md  prompt.md
docs/: contracts.md
scripts/: mcp_smoke_test.py
server/: README.md  app.py  blackjack_rules.py  blackjack_state_codec.py  checkers_rules.py  chess_rules.py  four_in_a_row_rules.py  mancala_rules.py  pyproject.toml  rpg_dice_rules.py  run_http.py  sea_battle_rules.py  slot_rules.py  tic_tac_toe_rules.py  tools.py
server/chess_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/templates/: blackjack-board-v1.html  checkers-board-v1.html  chess-board-v1.html  four-in-a-row-v1.html  mancala-board-v1.html  rpg-dice-v1.html  sea-battle-v1.html  slot-v1.html  tic-tac-toe-v1.html
server/tests/: test_blackjack_rules.py  test_blackjack_state_codec.py  test_checkers_rules.py  test_chess_rules.py  test_four_in_a_row_rules.py  test_mancala_rules.py  test_rpg_dice_rules.py  test_sea_battle_rules.py  test_slot_rules.py  test_tic_tac_toe_rules.py
web/: README.md  package-lock.json  package.json  vite.config.js
web/src/hooks/: useWidgetState.js
web/widgets/blackjack/: index.html
web/widgets/blackjack/src/: App.jsx  app.css
web/widgets/checkers/: index.html
web/widgets/checkers/src/: App.jsx  app.css
web/widgets/chess/: index.html
web/widgets/chess/src/: App.jsx  app.css
web/widgets/four-in-a-row/: index.html
web/widgets/mancala/: index.html
web/widgets/rpg-dice/: index.html
web/widgets/sea-battle/: index.html
web/widgets/slot/: index.html
web/widgets/tic-tac-toe/: index.html
(+19 files in other folders)
