[project]
name = "chess-mcp-server"
version = "0.1.0"
description = "FastMCP server scaffold for chess-mcp"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
  "cryptography>=42.0.0",
  "fastmcp>=0.4.0",
  "python-chess>=1.999",
  "pytest>=7.4",
  "uvicorn>=0.29.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
